[project]
name = "openweathermap-exporter"
version = "x.x.x"
description = "A basic crawler for openweathermap api"
authors = [{ name = "Dennis Bernardy", email = "bernardyd@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
packages = [{include = "openweathermap-exporter"}]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py312"]
line-length = "120"
