[project]
name = "openweathermap-exporter"
description = "A basic exporter for openweathermap"
version = "0.1.0"
authors = [
    { name = "Dennis Bernardy", email = "dennis@ethernerd.net" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openweather-wrapper",
    "prometheus-client",
    "pyyaml",
    "requests-cache",
    "matplotlib",
]

[dependency-groups]
"dev" = [
    "pytest",
    "pytest-cov",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"
